--- a/tp1-2/makefile
+++ b/tp1-2/makefile
@@ -1,11 +1,12 @@
 CC = gcc
 CFLAGS = -W -Wall -ansi -std=c99 -g
-LIBS =
-LDFLAGS = `sdl2-config --cflags --libs`
-INCLUDES =
+LIBS = -L./SDL2_image/.libs
+LDFLAGS = `sdl2-config --cflags --libs` -lSDL2_image
+INCLUDES = -I./SDL2_ttf -I./SDL2_image
 EXEC = main
 SRC = main.c fonctions_SDL.c
 OBJ = $(SRC:.c=.o)
+
 
 all: $(EXEC)
 main: $(OBJ)
